# ContainerClass-OOP1

./: .gitignore  CMakeLists.txt  ContainerClass.pro  Iterator.cpp  Iterator.h  node.h  set.cpp  set.h
tests/: CMakeLists.txt  tests.pro  tst_set_test.cpp
tests/method_add/: method_add.pro  tst_method_add.cpp
tests/method_arrows_overload/: method_arrows_overload.pro  tst_method_arrows_overload.cpp
tests/method_clear/: method_clear.pro  tst_method_clear.cpp
tests/method_contains/: method_contains.pro  tst_method_contains.cpp
tests/method_copy_constructor/: method_copy_constructor.pro  tst_method_copy_constructor.cpp
tests/method_default_constructor/: method_default_constructor.pro  tst_method_default_constructor.cpp
tests/method_equalty_overload/: method_equalty_overload.pro  tst_method_equalty_overload.cpp
tests/method_get_first/: method_get_first.pro  tst_method_get_first.cpp
tests/method_get_last/: method_get_last.pro  tst_method_get_last.cpp
tests/method_get_length/: method_get_length.pro  tst_method_get_length.cpp
tests/method_init_list_constructor/: method_init_list_constructor.pro  tst_method_init_list_constructor.cpp
tests/method_iterator_begin/: method_iterator_begin.pro  tst_method_iterator_begin.cpp
tests/method_iterator_end/: method_iterator_end.pro  tst_method_iterator_end.cpp
tests/method_move_constructor/: method_move_constructor.pro  tst_method_move_constructor.cpp
tests/method_plus/: method_plus.pro  tst_method_plus.cpp
tests/method_plus_equal_overload/: method_plus_equal_overload.pro  tst_method_plus_equal_overload.cpp
(+29 files in other folders)
